<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="presentes">Presentes</string>
    <string name="todos">Todos</string>
    <string name="ausentes">Ausentes</string>
    <string name="nome">Nome:</string>
    <string name="ausente">Ausente</string>
    <string name="presente">Presente</string>
    <string name="presen_a">Presença</string>
    <string name="salvar">Salvar</string>
</resources>